--- a/ic.css
+++ b/ic.css
@@ -13,7 +13,7 @@ he2{
 }
 
 .cab{
-    background-color: rgba(173, 173, 150, 0.678);
+    background-color: rgba(105, 89, 89, 0.678);
     margin: 0;
 }
 
@@ -26,19 +26,22 @@ body{
     padding: 0;
 }
 
-.flex{
-    display: flex;
-    background-color: rgb(146, 131, 131);
-    width: 100px;
-    height: 100px;
-}
+
 
 .box{
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    
+
 
 }
 
 .cont{
-
+    width: 100%;
+    height: 100%;
+    background-color: rgb(121, 112, 112);
+    display: flex;
 }
 
 .wow{
